# airwin2rack

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  Makefile  README.md  RackSDK.cmake  fxconfig.in  plugin.json  plugin.json.shell
.github/workflows/: build-daw-plugin.yml  build-lv2-individual.yml  build-plugin.yml  update-airwin.yml
cmake/: arch_mp15xa7.cmake  arm-none-eabi-gcc.cmake  basic-installer.cmake
doc/: manual.md  manualdaw.md
res/awpdoc/: .txt  ADClip7.txt  ADClip8.txt  ADClip9.txt  ADT.txt  AQuickVoiceClip.txt  Acceleration.txt  Acceleration2.txt  Air.txt  Air2.txt  Air3.txt  Air4.txt  AngleEQ.txt  AngleFilter.txt  Apicolypse.txt  Atmosphere.txt  AtmosphereBuss.txt  AtmosphereChannel.txt  Aura.txt  AutoPan.txt  AverMatrix.txt  Average.txt  Balanced.txt  BassAmp.txt  BassDrive.txt  BassKit.txt  Baxandall.txt  Baxandall2.txt  Baxandall3.txt  Beam.txt  BezEQ.txt  BezEQ2.txt  BezEQ3.txt  BeziComp.txt  BigAmp.txt  Biquad.txt  Biquad2.txt  BiquadDouble.txt  BiquadHiLo.txt  BiquadNonLin.txt  (+487 more)
res/installer_mac/: Readme.rtf
scripts/: commitDate  configure.pl  import.pl  updateToLatest.sh
scripts/check-update/: check-update.html.in  make-update.sh
scripts/installer_mac/: make_installer.sh
scripts/installer_win/: awcons.iss
src/: Airwin2Rack.cpp  Airwin2Rack.hpp  AirwinRegistry.cpp  AirwinRegistry.h  Module.cpp  ModuleAdd.h  airwin2rackbase.cpp  airwin2rackbase.h  airwin_consolidated_base.cpp  airwin_consolidated_base.h
src-juce/: AWConsolidatedEditor.cpp  AWConsolidatedEditor.h  AWConsolidatedProcessor.cpp  AWConsolidatedProcessor.h  CMakeLists.txt
src-juce/Crossfader/: Crossfader.h
src-lv2/: CMakeLists.txt  generate-ttl.cpp  plugin.cpp
src-rack/: Airwin2Rack.cpp  Airwin2Rack.hpp  Module.cpp
src/autogen_airwin/: ADClip7.cpp  ADClip7.h  ADClip7Proc.cpp  ADClip8.cpp  ADClip8.h  ADClip8Proc.cpp  ADClip9.cpp  ADClip9.h  ADClip9Proc.cpp  ADT.cpp  ADT.h  ADTProc.cpp  AQuickVoiceClip.cpp  AQuickVoiceClip.h  AQuickVoiceClipProc.cpp  Acceleration.cpp  Acceleration.h  Acceleration2.cpp  Acceleration2.h  Acceleration2Proc.cpp  AccelerationProc.cpp  Air.cpp  Air.h  Air2.cpp  Air2.h  Air2Proc.cpp  Air3.cpp  Air3.h  Air3Proc.cpp  Air4.cpp  Air4.h  Air4Proc.cpp  AirProc.cpp  AngleEQ.cpp  AngleEQ.h  AngleEQProc.cpp  AngleFilter.cpp  AngleFilter.h  AngleFilterProc.cpp  Apicolypse.cpp  (+1518 more)
